# proompts

./: .gitignore  .pre-commit-config.yaml  .promptignore  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE.md  README.md  README_DOCS.md  RELEASE_NOTES.md  _config.yml  calibration_output.md  mcp_server.py  mkdocs.yml  package-lock.json  package.json  plan.md  pmd-exclude.properties  pmd-ruleset.xml  pom.xml  pr_body.txt  pyproject.toml  regulatory_kb.yaml  requirements.txt  search.json  search.md  setup.py  test_all_output.txt  test_jinja.py  think.txt  todo.md  todo_fix.md  tox.ini  validation_output.txt  validation_output_2.txt
.github/: PULL_REQUEST_TEMPLATE.md
.jules/: beacon.md  mason.md  nexus.md
adjudication_prompts/: 01_real_time_adjudication_dashboard.json  01_real_time_adjudication_dashboard.md  01_real_time_adjudication_dashboard.prompt.yaml  02_source_document_endpoint_checklist.json  02_source_document_endpoint_checklist.md  02_source_document_endpoint_checklist.prompt.yaml  03_analyze_adjudication_kpis.json  03_analyze_adjudication_kpis.md  03_analyze_adjudication_kpis.prompt.yaml  overview.md
agentic_coding/: 01_product_brief.json  01_product_brief.md  01_product_brief.prompt.yaml  02_project_brief_epic  02_project_brief_epic.json  02_project_brief_epic.md  02_project_brief_epic.prompt.yaml  03_technical_implementation_plan.json  03_technical_implementation_plan.md  03_technical_implementation_plan.prompt.yaml  04_coding_session_guidelines.json  04_coding_session_guidelines.md  04_coding_session_guidelines.prompt.yaml  05_project_review.json  05_project_review.md  05_project_review.prompt.yaml  06_project_memory.json  06_project_memory.md  06_project_memory.prompt.yaml  06_todo_generation.json  06_todo_generation.md  06_todo_generation.prompt.yaml  07_e2e_test_discovery.json  07_e2e_test_discovery.md  07_e2e_test_discovery.prompt.yaml  07_folder_module_organization.json  07_folder_module_organization.md  07_folder_module_organization.prompt.yaml  overview.md  (+6 more)
promptops/: cli.py  documentation.py  governance.py  hygiene.py  init.py  persistence.py  pyproject.toml  regulatory_kb.yaml  ruff.toml  utils.py  validation.py
promptops/governance/: compliance_manifest.json
promptops/promptops/: __init__.py  agent.py  cli.py  console.py  documentation.py  engine.py  guard.py  init.py  ledger.py  registry.py  resolver.py  simulation.py  skill_export.py  sync.py  tags.py  theme.py  utils.py  validation.py  vibe.py  visualization.py
studio/: app.py  pyproject.toml  ruff.toml
studio/pages/: 1_📝_Prompt_Editor.py
studio/studio/: app.py  helpers.py
studio/studio/pages/: 1_📝_Prompt_Editor.py  2_🔄_Workflow_Editor.py  3_▶️_Simulation_Runner.py  4_☁️_Git_Sync.py  5_🔍_Audit_Portal.py
(+7023 files in other folders)
