[project]
name = "proompts-workspace"
version = "0.1.0"
description = "Monorepo workspace for Proompts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "promptops",
    "tools",
    "studio",
    "mcp>=1.27.2",
    "watchdog>=6.0.0",
]

[tool.uv.workspace]
members = [
    "promptops",
    "tools",
    "studio"
]

[tool.uv.sources]
promptops = { workspace = true }
tools = { workspace = true }
studio = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests", "tools/tools/scripts"]

[dependency-groups]
dev = [
    "axe-playwright-python>=0.1.7",
    "mkdocs-material>=9.7.6",
    "mypy>=1.19.1",
    "playwright>=1.61.0",
    "pytest>=8.4.2",
    "vulture>=2.16",
    "yamllint>=1.37.1",
]

[tool.vulture]
paths = [".", "scripts/", "promptops", "tools", "studio"]
exclude = [".venv", "build", "dist", ".git", ".github", ".vscode", "scripts/apply_refactor.py"]
min_confidence = 70
