[project]
name = "studio"
version = "0.1.0"
description = "Proompts Studio UI"
dependencies = [
    "promptops",
    "streamlit>=1.30.0",
    "pandas",
]
requires-python = ">=3.8"

[project.optional-dependencies]
visualizer = ["streamlit-mermaid"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
